@@ -4127,6 +4127,10 @@ Digitális szimuláció</translation>
         <source>initial delay delay time</source>
         <translation type="unfinished"></translation>
     </message>
+    <message>
+        <source>maximum step size in seconds</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 <context>
     <name>QucsActions</name>
