@@ -4271,6 +4271,10 @@ Usage:  qucsedit [-r] file
         <source>initial delay delay time</source>
         <translation type="unfinished"></translation>
     </message>
+    <message>
+        <source>maximum step size in seconds</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 <context>
     <name>QucsActions</name>
