@@ -4113,6 +4113,10 @@ Folosire:  qucsedit [-r] file
         <source>initial delay delay time</source>
         <translation type="unfinished"></translation>
     </message>
+    <message>
+        <source>maximum step size in seconds</source>
+        <translation type="unfinished"></translation>
+    </message>
 </context>
 <context>
     <name>QucsActions</name>
